Fix : form toolbar shifts left on empty document

--- a/src/styles/form-editor/form-editor.css
+++ b/src/styles/form-editor/form-editor.css
@@ -4,16 +4,15 @@
   padding: 0 1em;
   max-width: 100vw;
   margin: 0 auto;
-
-
   display: flex;
   flex-direction: row;
+  position: relative;
+  justify-content: space-between;
 }
 
 .form-app-bar {
   display: flex;
   flex-direction: column;
-  margin: 10px 3em;
 }
 
 .form-editor-title {
@@ -24,11 +23,6 @@
 .form-app-buttons {
   display: flex;
   flex-direction: column;
-
-}
-
-
-.form-template-entry {
 }
 
 .form-interaction {
